--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -406,6 +406,7 @@
                                             <div class="ng-autocomplete managedby-search">
                                                 <ng-autocomplete
                                                   [(ngModel)]="searchUserManagedBy"
+                                                  (selected)='addMember(searchUserManagedBy.username)'
                                                   [data]="searchUsers"
                                                   placeHolder="User Name"
                                                   (inputChanged) = "onChangeSearch($event)"
@@ -413,13 +414,13 @@
                                                   [itemTemplate]="itemTemplate"
                                                   [notFoundTemplate]="notFoundTemplate">
                                                 </ng-autocomplete>
-                                                <button class="add-managed-button" type="button" (click)="addMember(searchUserManagedBy.username)"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
+                                                <!-- <button class="add-managed-button" type="button" (click)="addMember(searchUserManagedBy.username)"><i class="fa fa-plus-square" aria-hidden="true"></i></button> -->
 
                         
                                                 <ng-template #itemTemplate let-item>
                                                   <div class="item">
                                                     <img src="{{item.photoUrl}}" height="25">
-                                                    <span [innerHTML]="item.firstName"></span>
+                                                    <span [innerHTML]="item.full_name"></span>
                                                     <small></small>
                                                   </div>
                                                 </ng-template>
@@ -429,12 +430,20 @@
                                                 </ng-template>
                                               </div>
 
+                                              <div class="row">
+                                                <div class="managedby-user-list col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow" *ngFor="let managed of managedBy">
+                                                  <app-usercard2 fromParent="managedBy" [managedBy]="managed"></app-usercard2>
+                                                  <div class="overlay"><button class="delete-managedby-user" type="button" (click)="removeMember(managed.username)"> <i class="fa fa-trash-o" aria-hidden="true"></i></button></div>
+
+                                                </div>
+                                              </div>
                          
-                                           <ul class="followers">
-                                               <li *ngFor="let managed of managedBy">
+                                           <!-- <ul class="followers">
+                                               <li *ngFor="let managed of managedBy" class="managedby-user-list">
+                                                <button class="delete-managedby-user" type="button" (click)="removeMember(managed.username)"> <i class="fa fa-trash-o" aria-hidden="true"></i></button>
                                                    <app-usercard1 [user]=managed></app-usercard1>
                                                </li>
-                                           </ul>
+                                           </ul> -->
                                            </div>
 
                                            <div id="managedByCollapse" [ngbCollapse]="isSettingsCollapsed"
