--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <button *ngIf="isMobile" type="button" [ngbPopover]="shareContent"  #p="ngbPopover"  class="notify-button"><i *ngIf="notifications" class="fa fa-bell-o" aria-hidden="true"></i><span class="circle">{{notifications.length}}</span></button>
+      <button *ngIf="isMobile && isUserLogged" type="button" [ngbPopover]="shareContent"  #p="ngbPopover"  class="notify-button"><i *ngIf="notifications" class="fa fa-bell-o" aria-hidden="true"></i><span class="circle">{{notifications.length}}</span></button>
       <button *ngIf="isMobile" type="button" [ngbPopover]="popContent"  #p="ngbPopover"  class="mobile-avatar-button"> <img src="assets/images/avatars/avatar.png" class="img-responsive"/></button>
 
       <!-- <ul *ngIf="isMobile" class="navbar-nav">
@@ -36,6 +36,7 @@
                   <a class="nav-link" [ngClass]="{'active': request}"  routerLink="request" routerLinkActive="active"><i class="fa fa-link"></i>Connections</a>
               </li>
           </ul>
+          <!--
           <ul class="navbar-nav mr-auto d-lg-none d-xl-none">
               <li class="nav-item">
                   <a class="nav-link" (click)="route('login')"><i class="fa fa-sign-in"></i>Login</a>
@@ -45,7 +46,7 @@
               </li>
 
           </ul>
-
+-->
             <div class="ng-autocomplete common-search" *ngIf="!isMobile">
               <ng-autocomplete
                 [data]="searchUsers"
@@ -109,7 +110,7 @@
         </div>
 
         <div>
-          <button type="button" [ngbPopover]="shareContent"  #p="ngbPopover"  class="notify-button"><i class="fa fa-bell-o" aria-hidden="true"></i><span class="circle" *ngIf="notifications">{{notifications.length}}</span></button>
+          <button type="button"  *ngIf="isUserLogged" [ngbPopover]="shareContent"  #p="ngbPopover"  class="notify-button"><i class="fa fa-bell-o" aria-hidden="true"></i><span class="circle" *ngIf="notifications">{{notifications.length}}</span></button>
         </div>
 
         <ng-template #shareContent>
