--- a/src/styles.css
+++ b/src/styles.css
@@ -10196,3 +10196,25 @@ input{
     border: none !important;
     background: none !important;
   }
+
+  #myBtn {
+    position: fixed; 
+    display: none;
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none;
+    outline: none; 
+    background-color: rgba(0,0,0,0.54); 
+    color: white; 
+    cursor: pointer; 
+    /* padding: 15px;  */
+    border-radius: 30px; 
+    font-size: 15px;
+    height: 40px;
+    width: 40px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
